# ChangeLog for dev-db/kyotocabinet
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/kyotocabinet/ChangeLog,v 1.11 2011/06/18 17:17:45 patrick Exp $

*kyotocabinet-1.2.62 (18 Jun 2011)

  18 Jun 2011; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.62.ebuild,
  +files/fix_configure-1.2.62.patch:
  Bump, fixes #368867

*kyotocabinet-1.2.50 (19 Mar 2011)

  19 Mar 2011; Patrick Lauer <patrick@gentoo.org> -kyotocabinet-1.2.30.ebuild,
  -kyotocabinet-1.2.34.ebuild, -kyotocabinet-1.2.41.ebuild,
  +kyotocabinet-1.2.50.ebuild:
  Bump

*kyotocabinet-1.2.43 (12 Feb 2011)

  12 Feb 2011; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.43.ebuild:
  Bump for #354581

*kyotocabinet-1.2.41 (09 Feb 2011)

  09 Feb 2011; Patrick Lauer <patrick@gentoo.org> -kyotocabinet-1.0.2.ebuild,
  -kyotocabinet-1.0.4.ebuild, -kyotocabinet-1.2.25.ebuild,
  -kyotocabinet-1.2.29.ebuild, -kyotocabinet-1.2.38.ebuild,
  +kyotocabinet-1.2.41.ebuild:
  Bump for #354031, remove old

*kyotocabinet-1.2.38 (31 Jan 2011)

  31 Jan 2011; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.38.ebuild:
  Bump

*kyotocabinet-1.2.34 (16 Jan 2011)

  16 Jan 2011; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.34.ebuild:
  Bump for #351340, thanks to jbergstroem

*kyotocabinet-1.2.30 (19 Dec 2010)

  19 Dec 2010; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.30.ebuild:
  Bump for #349112

*kyotocabinet-1.2.29 (10 Dec 2010)

  10 Dec 2010; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.29.ebuild,
  +files/remove_docinst-1.2.29.patch:
  Bump for #347849, thanks to jbergstroem

*kyotocabinet-1.2.25 (24 Nov 2010)

  24 Nov 2010; Patrick Lauer <patrick@gentoo.org> +files/fix_rpath-1.2.4.patch,
  +files/remove_ldconfig-1.2.4.patch, +kyotocabinet-1.2.25.ebuild:
  Bump for #331557

*kyotocabinet-1.0.4 (11 Jul 2010)

  11 Jul 2010; Patrick Lauer <patrick@gentoo.org>
  +kyotocabinet-1.0.4.ebuild, +files/remove_ldconfig-1.0.4.patch: