@@ -9,8 +9,10 @@ AUX remove_ldconfig.patch 438 RMD160 0bedbdfc94af933740cd238403fdecfc1e994bcb SH
 DIST kyotocabinet-1.2.43.tar.gz 785555 RMD160 defa8814f87ebd2924b8b609da42f1c4826a79e9 SHA1 44b627bf6d2e47f2f64205705c3f526ea5f8af1a SHA256 9ff273832e743481d743a1833400a2b5e9fd148f1d72c55338f2a2a0b6b7eeb3
 DIST kyotocabinet-1.2.50.tar.gz 833545 RMD160 cf23bfd2620e92a47548bfbf7f82b36434fa082d SHA1 868eedf924e0b2f3b02c097cc21446403d039fb9 SHA256 93b41f383251820d645e683e9d753b3cf0b890d1a91bb9c30ad760ab7c377848
 DIST kyotocabinet-1.2.62.tar.gz 866225 RMD160 c9acf41325542aeb3e51aaa8d60ee16a922e7c0d SHA1 71fe69e9cb96a8509b5c8693258b432aac96e86d SHA256 c6b9937b3e416e21532c98769c60a0902b46535959bda635bbcb784e37a772da
+DIST kyotocabinet-1.2.69.tar.gz 925609 RMD160 ce512f2d2aa4f3cd04bcae271fcd71f6dc033e73 SHA1 93ae2c560f72221cef51d0cb8780eb9e90e9d621 SHA256 9032452af0a72fc2171e87334130b9fb73ff173fb9435f3583216aceb4638f89
 EBUILD kyotocabinet-1.2.43.ebuild 1185 RMD160 7686008291fc8fda07dbe27e5047342955f4fcb4 SHA1 1a2d1199959cd129e7222f8f9291b8467f0a06e9 SHA256 49f67010de4723f65ce8e0ae1260cebf2337ba6d1828c6c35c1783f3b480ca33
 EBUILD kyotocabinet-1.2.50.ebuild 1141 RMD160 31a12eb1b8eacb07198b9bf9f9cfc70ce45f726b SHA1 a0bceda892c518f4c5a4c8e8187f6db3ab6c62e9 SHA256 5d572a1e028ed843446026cf44d4522df67a9d46568e3a4f5b26c43ca85aa9aa
 EBUILD kyotocabinet-1.2.62.ebuild 1357 RMD160 f3ebc8728e206941fbdec82cd0ba7577bb54d522 SHA1 8dfcfa76cf49b70c3dee841ccaec2da17d98d675 SHA256 628f29340461d69e92f02b2a7a5b2f838b9acb41caefdf73bc5d5fed367d44a1
-MISC ChangeLog 2304 RMD160 6207998bd1f9f6a74ea29d9c342879f986d1cf8e SHA1 9f18d16619b435837b7dc478113c4f58bcff250f SHA256 9159c38f63760c985f8f1ea8f1b13ccf7b0edd9d4e673ab968cf0f62a39a600c
+EBUILD kyotocabinet-1.2.69.ebuild 1356 RMD160 ed80de44d0f5fd6913bc80100474f7af2e74d0dd SHA1 98525f190bf24da16efbfa930e23532c4c807afa SHA256 5a6977b73ddc5e128503288a2d736cef49800e11add4170d499b7a75fff43fa3
+MISC ChangeLog 2427 RMD160 d13f580d1b94fceadcc2400d716fafac51609048 SHA1 ac542e5a81451f25ceaa80532602b895181f34e7 SHA256 cc42f60e483fe1f81546ad38d5edf81f019e879a0bc1a45b85e2bc7d4f4ca975
 MISC metadata.xml 352 RMD160 220825d8696420a59363c0336a7538ac06f7200a SHA1 a4317dfcce9cc96d73f864c8fb8bed43a7653a5b SHA256 efd7908dd5c15210fd78f1692adbe19d062a0a7e6ef7e18ce6a56be907805dd0
