@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/kyotocabinet
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/kyotocabinet/ChangeLog,v 1.11 2011/06/18 17:17:45 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/kyotocabinet/ChangeLog,v 1.12 2011/07/29 22:12:28 patrick Exp $
+
+*kyotocabinet-1.2.69 (29 Jul 2011)
+
+  29 Jul 2011; Patrick Lauer <patrick@gentoo.org> +kyotocabinet-1.2.69.ebuild:
+  Bump
 
 *kyotocabinet-1.2.62 (18 Jun 2011)
 
